style.css
/*--Applies to entire page--*/

* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}

html {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: grey;
  }

  /*--Background Image--*/

  body {
    background-image: url("Assets/grey\ background.jpg");
}

/*--Navigation*/

.navbar-brand {
    float: left;
    background-color: #59AAA5;
    color: white !important;
    font-size: 40px !important;
    margin: 0 !important;
    padding: 20px !important;
    font-weight: bold;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

nav {
    border-bottom: 1px solid lightgrey;
    padding: 0!important;
    padding-left: 40px !important;
}

.nav-item {
    font-size: 20px;
    border-right: 1px solid lightgrey;
}

.nav-item:last-child {
    border-right: none;
    padding-right: 20px;
}

/*--All Main Element Styles*/

.card {
    padding-top: 0px !important;
    padding: 5px;
    margin-top: 30px;
    }

h1 {
    font-family: Georgia;
    color: #59AAA5;
    font-weight: bold;
}

hr {
    margin-top: 30px !important;
    margin-bottom: 35px !important;
    border-top: 2px solid lightgrey !important;
}

/*--About Style Elements*/

#TiffanyPicture {
    margin: 15px 25px 15px 15px;
    float: left;
}

#aboutmebox {
    float: left;
}

p {
    color: grey;
    line-height: 35px;
}

/*--Contact Style Elements*/

label {
    color: grey;
}

button {
    background-color: #59AAA5 !important;
    color: white !important;
    border-color:  #59AAA5 !important;
    border-radius: 0 !important;
    padding: 5px 35px !important;
}

/*--Portfolio Style Elements*/


h5 {
    background-color: white;
    color: #59AAA5;
    padding: 50px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin: auto 0 !important;
}

.Activity {
    position: relative !important;
    text-align: center; 
    margin-top: 40px;
}


.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 10px;
}

.column {
    flex: 50%;
    padding: 0 4px;
}

.column img {
    margin-top: 8px;
    vertical-align: middle;
}

/*--Footer Styles*/

footer {
    border-top: 10px solid #59AAA5;
    position: fixed;
    text-align: center;
    color: white;
    background-color: #666666;
    left: 0;
    bottom: 0;
    padding: 40px;
    min-width:100%;
    max-width:100%;
}

/*--Layout Containers-header*/

.container {
    margin: 0 auto;
}

/*--Media Queries*/

@media only screen and (max-width: 640px) {
    .navbar-brand {    
        width: 100%;
    }
    
    .nameLine {
        width: 100%;
        margin: 0px;
        padding: 0px;
        text-align: center;
    }
    .div-ul {
        width: 100%;
        margin: 0px;
        padding: 0px;
        text-align: center;
    }
    
    ul {
        justify-content: center;
    }
    
    }

